docs/am/4.12/getting-started/install-and-upgrade-guides/4.7-upgrade-guide.md
---
metaLinks:
  alternates:
    - >-
      https://app.gitbook.com/s/H4VhZJXn1S232OEmh8Wv/getting-started/install-and-upgrade-guides/4.7-upgrade-guide
---

# 4.7 Upgrade Guide

{% hint style="warning" %}
**If your upgrade will skip versions:** Read the version-specific upgrade notes for each intermediate version. You may be required to perform manual actions as part of the upgrade.

**Run scripts on the correct database:** `gravitee` is not always the default database. Run `show dbs` to return your database name.
{% endhint %}

{% hint style="info" %}
It is recommended to upgrade to 4.7 from 4.5 or 4.6
{% endhint %}

{% hint style="danger" %}
Upgrade to version 4.7 first, before upgrading to version 4.8 or any higher version.
{% endhint %}

## 4.12 Upgrade Notes

### Database Migrations

Access Management 4.12 requires the following database migrations:

- `4.12.0-applications-add-sub-type`: Adds a `sub_type` column to the `applications` table to support agent application personas (User Embedded, Hosted Delegated, Autonomous).
- `4.12.0-trust-domains-table`: Creates the `trust_domains` table to store SPIFFE trust domain configurations for workload identity validation.

These migrations are applied automatically on startup.

### Breaking Changes

**JWT-Bearer Assertion Semantics**: Standard `jwt-bearer` client assertions (`client_assertion_type=urn:ietf:params:oauth:client-assertion-type:jwt-bearer`) now enforce strict RFC 7523 semantics. The `iss` claim must equal the `sub` claim, and both must equal the `client_id`. Assertions with a SPIFFE `sub` are rejected with error: "SPIFFE JWT-SVID must be sent with client_assertion_type=jwt-spiffe".

**Application Model**: The application model now uses a top-level `subType` field instead of the nested `settings.agent` structure. Existing applications are migrated automatically, but custom integrations reading or writing the `settings.agent` field must be updated to use `subType`.

{% hint style="warning" %}
**Java Upgrade**

Gravitee Access Management requires Java 21. If you are deploying Access Management with RPM or using the distribution bundle, please ensure to upgrade your java version.
{% endhint %}

## Single Backend deployments

If your current deployment uses a single database to store the data for all repository scopes (management, OAuth2, and gateway), no specific actions are required but you have to ensure the dataPlane settings are properly set in the Management API gravitee.yaml.

{% tabs %}
{% tab title="MongoDB" %}
```yaml
repositories:
  # specify which scope is used as reference
  # to initialize the IdentityProviders with the "use system cluster"
  # option enabled (only management and gateway scopes are allowed as value)
  system-cluster: management
  # Management repository is used to store global configuration such as domains, clients, ...
  # This is the default configuration using MongoDB (single server)
  # For more information about MongoDB configuration, please have a look to:
  # - http://api.mongodb.org/java/current/com/mongodb/MongoClientOptions.html
  management:
    type: mongodb
    mongodb:
      dbname: gravitee-am
      host: mongohost
      port: 27017
  #    username:
  #    password:
  #    authSource:
  #    connectionsPerHost: 0
  #    connectTimeout: 500
  #    # ...
  gateway:
    type: mongodb
    use-management-settings: true
    mongodb:
      dbname: gravitee-am
      host: mongohost
      port: 27017

  oauth2:
    type: mongodb
    use-management-settings: true
    mongodb:
      dbname: gravitee-am
      host: mongohost
      port: 27017
  
dataPlanes:
  - id: default
    name: Legacy domains
    type: mongodb
    mongodb:
      dbname: gravitee-am
      host: mongohost
      port: 27017
  #    uri:
  #    username:
  #    password:
  #    authSource:
  #    connectionsPerHost: 0
  #    connectTimeout: 500
  #    ...
```
{% endtab %}

{% tab title="RDBMS" %}
{% hint style="warning" %}
As for [reporitory](../../guides/identity-providers/database-identity-providers/jdbc.md) plugin, place the drivers in `$GRAVITEE_HOME/plugins/ext/dataplane-am-jdbc`
{% endhint %}

<pre class="language-yaml"><code class="lang-yaml">repositories:
<strong>  management:
</strong>    type: jdbc             # repository type
    jdbc:                  # jdbc/r2dbc repository
      driver:              # jdbc driver
      host:                mydbserver
      port:                1234
      database:            gravitee_am
      username:            amuser
      password:            xxxxx
      
  gateway:
    type: jdbc
    use-management-settings: true
    jdbc:                  # jdbc/r2dbc repository
      driver:              # jdbc driver
      host:                mydbserver
      port:                1234
      database:            gravitee_am
      username:            amuser
      password:            xxxxx
      
  oauth2:
    type: jdbc
    use-management-settings: true
    jdbc:                  # jdbc/r2dbc repository
      driver:              # jdbc driver
      host:                mydbserver
      port:                1234
      database:            gravitee_am
      username:            amuser
      password:            xxxxx
      
      
dataPlanes:
  - id: default
    name: Legacy domains
    type: jdbc
    jdbc:                  # jdbc/r2dbc repository
      driver:              # jdbc driver
      host:                mydbserver
      port:                1234
      database:            gravitee_am
      username:            amuser
      password:            xxxxx
</code></pre>
{% endtab %}
{% endtabs %}

**NOTE**: When defining repository settings using environment variables, ensure that the Data Plane settings are aligned with the settings configured for the "gateway" [repository](../configuration/configure-repositories.md#scopes) scope.

{% tabs %}
{% tab title="MongoDB" %}
Environment variables which need to be defined are the following :

```bash
gravitee_dataPlanes_0_id=default
gravitee_dataPlanes_0_type=mongodb
gravitee_dataPlanes_0_mongodb_uri=<put here the mongo_uri>
# if you are not using Mongo URI but host and port
# gravitee_dataPlanes_0_mongodb_host=<put here the mongo host>
# gravitee_dataPlanes_0_mongodb_port=27017
# additional settings can be added as for the repository layer
```
{% endtab %}

{% tab title="RDBMS" %}
Environment variables which need to be defined are the following :

```bash
gravitee_dataPlanes_0_id=default
gravitee_dataPlanes_0_jdbc_database=mydatabase
gravitee_dataPlanes_0_jdbc_driver=postgresql
gravitee_dataPlanes_0_jdbc_host=myhost
gravitee_dataPlanes_0_jdbc_password=*******
gravitee_dataPlanes_0_jdbc_port=5432
gravitee_dataPlanes_0_jdbc_username=amuser
gravitee_dataPlanes_0_type=jdbc
# additional settings can be added as for the repository layer
```
{% endtab %}
{% endtabs %}

### Helm Chart

When deploying on kubernetes using HelmChart, the values.yaml should remains the same. The dataPlanes section of the Management API will be initialized using the `mongo` or `jdbc` section.

**NOTE**: When defining repository settings using environment variables, ensure that the Data Plane settings are also defined as explained previously.

## Multiple Backends deployments

If your current deployment uses two separate databases—one for scope management information (the control plane) and another for scope gateway and OAuth2 information (the data plane)—a data migration is required. In version 4.7, we aim to provide a clear distinction between entities managed by the Data Plane and those managed by the Control Plane. User profiles, along with other entities, must be moved to the scope gateway and will remain accessible via the Management API through the DataPlane plugin. The affected entities are as follows:

{% tabs %}
{% tab title="MongoDB" %}
| Entity          | Collection Name                                                         | Description                                                                                              |
| --------------- | ----------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------- |
| User            | users                                                                   | User profiles                                                                                            |
| Credential      | WebAuthn\_credentials                                                   | Credentials used for passwordless authentication                                                         |
| Device          | devices                                                                 | Ddevice identifier used for MFA                                                                          |
| Group           | groups                                                                  | Groups of users defined at domain level                                                                  |
| PasswordHistory | password\_histories                                                     | Passwords already used per user to prevent their usage if the PasswordPolicy is configured to check them |
| UserActivity    | user\_activities                                                        | Record of user actions used by the risk assessment.                                                      |
| UMA entities    | <p>uma_access_policies<br>uma_permission_ticket<br>uma_resource_set</p> | Entities used to implement UMA 2.0                                                                       |
{% endtab %}

{% tab title="RDBMS" %}
| Entity          | Table Name                                                                                                                                           | Description                                                                                              |
| --------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------- |
| User            | <p>users<br>user_entitlements<br>user_roles<br>dynamic_user_roles<br>user_addresses<br>user_attributes<br>user_identities<br>dynamic_user_groups</p> | User profiles                                                                                            |
| Credential      | WebAuthn\_credentials                                                                                                                                | Credentials used for passwordless authentication                                                         |
| Device          | devices                                                                                                                                              | Device identifier used for MFA                                                                           |
| Group           | <p>groups<br>group_members<br>group_roles</p>                                                                                                        | Groups of users defined at domain level                                                                  |
| PasswordHistory | password\_histories                                                                                                                                  | Passwords already used per user to prevent their usage if the PasswordPolicy is configured to check them |
| UserActivity    | user\_activities                                                                                                                                     | Record of user actions used by the risk assessment.                                                      |
| UMA entities    | <p>uma_access_policies<br>uma_permission_ticket<br>uma_resource_set</p>                                                                              | Entities used to implement UMA 2.0                                                                       |
{% endtab %}
{% endtabs %}

{% hint style="success" %}
To assist with data migration, generic scripts are available on [GitHub](https://github.com/gravitee-io/gravitee-access-management/tree/4.7.x/docs/upgrades/4.7.0). Please review the script corresponding to your backend and modify the variables at the beginning of the script to specify the server, database, and credentials to use. Note that these scripts may not be optimal for your environment, and you might need to modify the settings of the tools used into them. Additionally, you may have tools in place to manage table or collection synchronization more efficiently.
{% endhint %}

We recommend performing the migration during off-peak hours to minimize service disruption or limit traffic on the gateways. The procedure for upgrading to version 4.7 is as follows:

* [Prepare the configurations ](4.7-upgrade-guide.md#adapt-the-access-management-configuration)for the Management API and the Gateway.
* Download and [modify the migration script](https://github.com/gravitee-io/gravitee-access-management/tree/4.7.0/docs/upgrades/4.7.0) to target the source server hosting the scope management (Control Plane) and the destination server (Data Plane) hosting the scope gateway. Ensure to adjust any commands as needed.
* Stop AM services
* Perform a backup of your databases.
* Execute the script.
* Validate that the destination server contains the migrated data for the relevant entities.
* Start AM in version 4.7: The Management API will assign the "default" identifier to security domains as the data plane.
* Once the services are up and running, service flow can be restored

{% hint style="info" %}
Some tools provided by database vendors allow for data synchronization without service interruption (such as **mongosync** for MongoDB or specific commands in the case of SaaS offerings). Please refer to your vendor's documentation to identify the most suitable tool for your situation if our procedure and scripts do not meet your production requirements.
{% endhint %}

### Adapt the Access Management configuration

Below is an example of the configuration using two databases—one for the Control Plane (management scope) and one for the Data Plane (gateway and OAuth2 scopes). In summary, the structure of the **gravitee.yaml** remains largely unchanged. Only three new parameters are introduced:

* **use-gateway-settings**: used to share the connection pool between the gateway scope and the OAuth2 scope.
* The **dataPlanes** section: defines the access point to the Data Plane database containing the gateway scope entities. The identifier `default` is required, as this is the value assigned by the upgrade process executed by the Management API during startup.
* **services.sync.permissions:** this parameter allows the roles created for each domain to be loaded into memory. This enables the Gateway to rely on the Control Plane only for synchronization tasks (such as loading the configuration of a domain, application, plugin, etc.). In the event of a Control Plane outage, the Gateway remains functional, as the various configuration elements are already loaded into memory.

{% hint style="success" %}
The Helm chart has been modified to accept the same `repositories` & `dataPlanes` configuration structure as the **gravitee.yaml** in the **values.yaml**. The following example also applies to the chart.
{% endhint %}

{% tabs %}
{% tab title="MongoDB" %}
{% hint style="info" %}
**system-cluster** is a new parameter introduced in version 4.6.4 to allow the reuse of the connection pool from the management or gateway scope in a Mongo Identity Provider plugin. To ensure the Mongo IDP plugin instance uses this shared pool, the "use system cluster" checkbox must be enabled in the form. By default, **system-cluster** is initialized to **management** as in 4.6 the DataPlane split was not in place. With the introduction of the DP Split in version 4.7, it may be more beneficial to set this parameter to **gateway** in order to avoid relying on the Control Plane for user authentication.
{% endhint %}

{% hint style="danger" %}
Even if the **gateway** scope is specified as the value for the s**ystem-cluster** parameter, the default identity providers initialized during domain creation remain linked to the management scope.
{% endhint %}

```yaml
repositories:
  # specify which scope is used as reference
  # to initialize the IdentityProviders with the "use system cluster"
  # option enabled (only management and gateway scopes are allowed as value)
  system-cluster: management
  # Management repository is used to store global configuration such as domains, clients, ...
  # This is the default configuration using MongoDB (single server)
  # For more information about MongoDB configuration, please have a look to:
  # - http://api.mongodb.org/java/current/com/mongodb/MongoClientOptions.html
  management:
    type: mongodb
    mongodb:
      dbname: gravitee-am-cp
      host: mongohost-controlplane
      port: 27017
  #    username:
  #    password:
  #    ...
  gateway:
    type: mongodb
    use-management-settings: false
    mongodb:
      dbname: gravitee-am-dp
      host: mongohost-dataplane
      port: 27017

  oauth2:
    type: mongodb
    use-management-settings: false
    use-gateway-settings: true
    mongodb:
      dbname: gravitee-am-dp
      host: mongohost-dataplane
      port: 27017

# configure the DataPlane plugin
# to be align with the gateway scope
dataPlanes:
  - id: default
    name: Legacy domains
    type: mongodb
    mongodb:
      dbname: gravitee-am-dp
      host: mongohost-dataplane
      port: 27017
  #    uri:
  #    username:
  #    password:
  #    ...

# synchronize roles defined for each domain
# to load them in the Gateway heap
services:
  sync:
    permissions: true
```
{% endtab %}

{% tab title="RDBMS" %}
{% hint style="warning" %}
As for [reporitory](../../guides/identity-providers/database-identity-providers/jdbc.md) plugin, place the drivers in `$GRAVITEE_HOME/plugins/ext/dataplane-am-jdbc`
{% endhint %}

<pre><code>repositories:
<strong>  management:
</strong>    type: jdbc             # repository type
    jdbc:                  # jdbc/r2dbc repository
      driver:              # jdbc driver
      host:                mydbserver-cp
      port:                1234
      database:            gravitee_am_cp
      username:            amuser
      password:            xxxxx
      
  gateway:
    type: jdbc
    use-management-settings: false
    jdbc:                  # jdbc/r2dbc repository
      driver:              # jdbc driver
      host:                mydbserver-dp
      port:                1234
      database:            gravitee_am_dp
      username:            amuser
      password:            xxxxx
      
  oauth2:
    type: jdbc
    use-management-settings: false
    use-gateway-settings: true
    jdbc:                  # jdbc/r2dbc repository
      driver:              # jdbc driver
      host:                mydbserver-dp
      port:                1234
      database:            gravitee_am_dp
      username:            amuser
      password:            xxxxx
      
      
# configure the DataPlane plugin
# to be align with the gateway scope
dataPlanes:
  - id: default
    name: Legacy domains
    type: jdbc
    jdbc:                  # jdbc/r2dbc repository
      driver:              # jdbc driver
      host:                mydbserver-dp
      port:                1234
      database:            gravitee_am_dp
      username:            amuser
      password:            xxxxx
      

# synchronize roles defined for each domain
# to load them in the Gateway heap
services:
  sync:
    permissions: true
</code></pre>
{% endtab %}
{% endtabs %}

### Adapt the migration scripts

Generic scripts are available on [GitHub](https://github.com/gravitee-io/gravitee-access-management/tree/4.7.x/docs/upgrades/4.7.0). Please review the script corresponding to your backend and modify the variables at the beginning of the script to specify the server, database, and credentials to use.

{% hint style="info" %}
Note that these scripts may not be optimal for your environment, and you might need to modify the settings of the tools used into them. If you have tools in place to manage table or collection synchronization more efficiently, use the list of entities defined [previously](4.7-upgrade-guide.md#multiple-backends-deployments) to determine which collections or tables need to be migrated.
{% endhint %}

After reviewing the script on your side, if the commands do not require modification, the only elements that need to be changed are the variables containing the identifiers and the server access points.

{% tabs %}
{% tab title="MongoDB" %}
The script montodb-migration.sh expect the connection URI and the Database name for the source and the destination clusters.

```bash
# Source MongoDB Cluster details
SOURCE_URI="mongodb://user:pasword@source.mongodb.cluster:27017"
SOURCE_DB="source_database"

# Destination MongoDB Cluster details
DEST_URI="mongodb://user:pasword@destination.mongodb.cluster:27017"
DEST_DB="destination_database"
```

If this script using **mongodump** and **mongorestore** suits your needs, the directory used to temporarily store the data can be changed via the variable

```bash
# Path for temporary dump
TEMP_DUMP_PATH="/tmp/mongo_dump"
```
{% endtab %}

{% tab title="RDBMS" %}
All the RDBMS scripts expect the same connection seettings and the Database name for the source and the destination clusters.

```bash
# Configuration
SOURCE_DB_HOST="source_host"
SOURCE_DB_PORT="5432"
SOURCE_DB_NAME="source_db"
SOURCE_DB_USER="source_user"
SOURCE_DB_PASSWORD="source_password"

DEST_DB_HOST="destination_host"
DEST_DB_PORT="5432"
DEST_DB_NAME="destination_db"
DEST_DB_USER="destination_user"
DEST_DB_PASSWORD="destination_password"
```
{% endtab %}
{% endtabs %}
